docs/examples/echoservice/echoserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Env=albwaf,Owner=vladionescu
spec:
  rules:
    - host: echoserver.external.alb-waf.vladionescu.experimental.ownzones.com
      http:
        paths:
          - path: /
            backend:
              serviceName: echoserver
              servicePort: 80
